--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -122,7 +122,7 @@ body {
 header {
     display: grid;
     grid-area: header;
-    height: 70vh;
+    height: 100vh; 
     width: 100%;
     background-image: url('../img/fondopagina.jpg');
     background-size: cover;
@@ -247,6 +247,17 @@ header > div {
     color: #1F1F1F;
     margin-top: 10px;
     transition: height 0.5s ease;
+}
+
+.prod-desc p{
+    font-size: 20px;
+}
+
+.prod-desc p span{
+    font-size: 15px;
+    color: grey; 
+    text-decoration: line-through; 
+    font-size: 15px;
 }
 
 .prod-desc strong {
