--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -25,8 +25,8 @@ body {
   /* box-shadow already handled by original css? yes. */
   box-shadow: 0 0 19px rgba(0, 0, 0, 0.3);
   z-index: 1000;
-  height: 100px;
-  /* Force height to match original */
+  min-height: 100px;
+  height: auto;
 }
 
 #nav-section .logoPagina {
@@ -253,11 +253,13 @@ header p {
 
 
 .products-carousel {
-  scroll-snap-type: x mandatory; /* fuerza que “encaje” cada tarjeta */
+  scroll-snap-type: x mandatory;
+  /* fuerza que “encaje” cada tarjeta */
 }
 
 .products-carousel .col-12 {
-  scroll-snap-align: start; /* cada producto se alinea al inicio */
+  scroll-snap-align: start;
+  /* cada producto se alinea al inicio */
 }
 
 
@@ -326,17 +328,32 @@ footer ul {
     font-size: 3rem;
   }
 
+  #nav-section {
+    height: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 
+  #nav-section .logoPagina {
+    height: 50px;
+  }
+
+  #main-nav li {
+    padding: 10px 20px;
+    border: 1px solid #D72631;
+    margin-bottom: 5px;
+  }
 }
 
 @media (max-width: 576px) {
+
   header h1 {
     font-size: 40px;
   }
 
   .fotoMasNovedades {
     height: 300px;
-    border-radius: 0px;    
+    border-radius: 0px;
     margin: 0;
   }
 
@@ -351,15 +368,5 @@ footer ul {
 
   .video-container .video-desc h2 {
     font-size: 2rem;
-  }
-
-  #nav-section {
-    height: auto;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
-  #nav-section .logoPagina {
-    height: 50px;
   }
 }
