C3 : Progreso en valoracion media

--- a/frontend/css/auth.css
+++ b/frontend/css/auth.css
@@ -14,100 +14,7 @@ body {
     box-sizing: border-box;
 }
 
-/* Reuse Navigation Styles */
-#nav-section {
-    display: grid;
-    grid-template-areas: "logo nav search icons";
-    grid-template-columns: 10% 1fr 2fr 1fr;
-    height: 100px;
-    line-height: 100px;
-    position: fixed;
-    background-color: #1F1F1F;
-    box-shadow: 0 0 19px rgba(0, 0, 0, 0.3);
-    width: 100%;
-    z-index: 1;
-    top: 0;
-    left: 0;
-}
-
-#nav-section .logoPagina {
-    grid-area: logo;
-    height: 100px;
-    margin-left: 10px;
-}
-
-#nav-section #main-nav {
-    grid-area: nav;
-    list-style-type: none;
-    padding: 0;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-}
-
-#nav-section #main-nav li {
-    align-content: center;
-    text-align: center;
-    padding: 20px;
-    border: 1px solid #D72631;
-    border-radius: 10px;
-    transition: background-color 0.5s ease;
-    line-height: normal;
-}
-
-#nav-section #main-nav li:hover {
-    background-color: #D72631;
-}
-
-#nav-section #main-nav li:hover a {
-    color: #FFFFFF;
-}
-
-#nav-section #main-nav a {
-    color: #FFFFFF;
-    text-decoration: none;
-    cursor: pointer;
-    transition: color 0.5s ease;
-    padding: 20px;
-}
-
-#nav-section input[type=text] {
-    grid-area: search;
-    justify-self: "center";
-    align-self: "center";
-    height: 25px;
-    width: 500px;
-    padding: 10px;
-    border: 2px solid transparent;
-    background-color: #FFFFFF;
-    border-radius: 50px;
-    transition: width 0.5s ease, border-color 0.5s ease;
-}
-
-#nav-section input[type=text]:focus {
-    outline: none;
-    border-color: #D72631;
-    width: 550px;
-}
-
-#icon-nav {
-    grid-area: icons;
-    justify-self: end;
-    margin-right: 20px;
-    align-self: center;
-    width: 30%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-
-#icon-nav img {
-    width: 40px;
-    height: 40px;
-    display: block;
-}
+/* Reuse Navigation Styles from style.css */
 
 /* Auth Form Styles */
 section {
